--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Button from '../components/vue/Button.vue';
                 </svg>  
                 <span class="ml-2 text-base">Calculator</span>                                  
             </div>
-            <div class="flex justify-end mx-6 text-xl text-white">
+            <div class="flex justify-end mx-6 text-xl text-white my-2">
                 5 
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="w-4 h-4 mt-2">
                     <path d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z" />
@@ -24,10 +24,28 @@ import Button from '../components/vue/Button.vue';
             </div>
             <span class="flex justify-end mx-6 text-2xl text-white">25</span>
             <hr>
-            <div class="mx-6 grid-cols-4">
-                
+            <div class="grid grid-cols-4 grid-rows-4 ml-8 mr-4 mb-4 mt-4 gap-4">
+                <Button/>
+                <Button/>
+                <Button/>
+                <Button/>
+
+                <Button/>
+                <Button/>
+                <Button/>
+                <Button/>
+
+                <Button/>
+                <Button/>
+                <Button/>
+                <Button/>
+
+                <Button/>
+                <Button/>
+                <Button/>
+                <Button/>
+
             </div>
 		</div>
 	</div>
 </Layout>
-
